# orthanc-worklists

./: .gitignore  AUTHORS  CMakeLists.txt  Plugin.cpp  README.md  release-notes.md
.github/workflows/: build-and-release.yml
Resources/: SyncOrthancFolder.py
Resources/Orthanc/CMake/: AutoGeneratedCode.cmake  Compiler.cmake  DownloadOrthancFramework.cmake
Resources/Orthanc/Plugins/: OrthancPluginCppWrapper.cpp  OrthancPluginCppWrapper.h
Resources/Orthanc/Sdk-1.12.9/orthanc/: OrthancCPlugin.h
